# marian-tensorboard

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  marian-visualize.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: unittests.yml
src/marian_tensorboard/: __init__.py  marian_tensorboard.py  version.py
tests/: test_log_parser.py  test_marian_tensorboard.py  test_tensorboard.py
