[metadata]
name = marian-tensorboard
description = TensorBoard integration for Marian NMT
author = Roman Grundkiewicz
author_email = rgrundkiewicz@gmail.com
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/marian-nmt/marian-tensorboard
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


install_requires =
    protobuf==3.19
    azureml-core>=1
    tensorboard>=2,<3
    tensorboardX>=2.4


[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
console_scripts =
    marian-tensorboard = marian_tensorboard:main
